--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "swiper": "^11.0.6"
   }
 }
